--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
         "incremental": true
     },
     "include": [
-        "packages/**/*"
+        "apps/**/*"
     ],
     "exclude": [
         "node_modules"
