--- a/apps/chat/package.json
+++ b/apps/chat/package.json
@@ -9,19 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "2.2.0",
+    "@samchon/openapi": "2.3.1",
+    "@types/uuid": "10.0.0",
+    "clsx": "2.1.1",
+    "nanoid": "5.0.9",
+    "next": "15.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.1"
+    "swagger-ui-react": "5.18.2",
+    "tailwind-merge": "2.5.5",
+    "typia": "7.5.0",
+    "uuid": "11.0.3",
+    "zustand": "5.0.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/swagger-ui-react": "4.18.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
