--- a/apps/chat/package.json
+++ b/apps/chat/package.json
@@ -13,6 +13,7 @@
     "@samchon/openapi": "2.3.1",
     "@types/uuid": "10.0.0",
     "clsx": "2.1.1",
+    "js-yaml": "4.1.0",
     "nanoid": "5.0.9",
     "next": "15.1.1",
     "react": "^19.0.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/js-yaml": "4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
