--- a/apps/chat/package.json
+++ b/apps/chat/package.json
@@ -17,6 +17,7 @@
     "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^7.2.0",
     "js-yaml": "4.1.0",
+    "motion": "12.0.6",
     "nanoid": "5.0.9",
     "negotiator": "^0.6.3",
     "next": "14.1.0",
