--- a/apps/chat/package.json
+++ b/apps/chat/package.json
@@ -22,6 +22,7 @@
     "negotiator": "^0.6.3",
     "next": "14.1.0",
     "next-intl": "^3.4.0",
+    "posthog-js": "1.212.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.1",
